Ajusting navbar and LandingPage colors to match our project design

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,8 +63,12 @@ flutter:
         - asset: assets/fonts/Montserrat-Regular.ttf
     - family: RobotoRegular
       fonts:
-        - asset: fonts/Roboto-Regular.ttf
-        - asset: fonts/Roboto-Bold.ttf
+        - asset: assets/fonts/Roboto-Regular.ttf
+        - asset: assets/fonts/Roboto-Bold.ttf
+    - family: RobotoLight
+      fonts:
+        - asset: assets/fonts/Roboto-Light.ttf
+        - asset: assets/fonts/Roboto-LightItalic.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
