--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,9 @@ flutter:
       fonts:
         - asset: assets/fonts/Roboto-Light.ttf
         - asset: assets/fonts/Roboto-LightItalic.ttf
+    - family: FunCity
+      fonts:
+        - asset: assets/fonts/FunCityLevel2Stencil.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
