--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ environment:
 dependencies:
   fl_chart: ^0.12.0
   flappy_search_bar: 1.4.1
+  table_calendar: ^2.3.0
 
   flutter:
     sdk: flutter
