--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   fl_chart: ^0.12.0
   flappy_search_bar: 1.4.1
   table_calendar: ^2.3.0
+  responsive_framework: ^0.0.11
 
   flutter:
     sdk: flutter
