--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flappy_search_bar: 1.4.1
   table_calendar: ^2.3.0
   responsive_framework: ^0.0.11
+  lipsum: ^1.0.1
 
   flutter:
     sdk: flutter
