--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   table_calendar: ^2.3.0
   responsive_framework: ^0.0.11
   lipsum: ^1.0.1
+  ftpconnect: ^0.2.0
+  file_picker: ^2.1.0
 
   flutter:
     sdk: flutter
