--- a/WEB/Dockerfiles/Dockerfile-FTP.txt
+++ b/WEB/Dockerfiles/Dockerfile-FTP.txt
@@ -1,28 +1,22 @@
-# Utilizando como base uma imagem do SO Ubuntu 20:04
-FROM ubuntu:20.04
+FROM centos:7
 
-# Instalando e o servico FTP (vsftpd), o editor de texto (VIM)
-# e o servico de controle do sistema (systemctl)
-RUN apt update && \
-    apt-get install -y vsftpd && \
-    apt-get install -y vim && \
-    apt-get install -y systemctl
+MAINTAINER leonardo_cech@estudante.sc.senai.br
 
-# Removendo o arquivo de configuracao padrao do vsftpd
-RUN rm -r /etc/vsftpd.conf
+ENV ftp=/etc/vsftpd
+ENV uploads=/var/ftp/uploads
+ENV ssl=/etc/ssl/private
 
-# Copiando o arquivo de configuracao modificado
-# para o local do padrao do vsftpd
-COPY vsftpd.conf /etc/
+RUN yum -y update ;\
+    yum -y install which vsftpd net-tools vsftpd-sysvinit openssh-server;\
+    yum clean all 
 
-# Criando um diretorio publico para acesso de usuarios
-# anonimos
-RUN mkdir /var/ftp && \
-    mkdir /var/ftp/pub && \
-    mkdir /var/ftp/pub/upload
+RUN rm -i ${ftp}/vsftpd.conf
+RUN mkdir ${uploads}; chmod 777 ${uploads}
+COPY vsftpd.conf ${ftp}
 
-# Definindo o proprietario do diretorio como root
-RUN chown ftp:root /var/ftp/pub/upload
+RUN mkdir ${ssl}
+COPY vsftpd.pem ${ssl}/
 
-# Atribuindo todas as permissoes ao diretorio
-RUN chmod 0777 /var/ftp/pub/upload
+EXPOSE 20 21 990
+
+CMD ["/usr/sbin/vsftpd","-obackground=NO"]
